updated .md files